Alignment fixes

--- a/application/views/global.css
+++ b/application/views/global.css
@@ -2813,13 +2813,13 @@ font-weight: bold !important;
     color: #000000;
 }
 
-.custom_ui_13884_13886 .btn {
-    color: #000000;
-    background-color: #FFFFFF;
+.custom_ui_13884_13886 .btn-6255 {
+    color: #000000 !important;
+    background-color: #FFFFFF !important;
 }
-.custom_ui_13884_13885 .btn {
-    color: #FFFFFF;
-    background-color: #000000;
+.custom_ui_13884_13885 .btn-6255 {
+    color: #FFFFFF !important;
+    background-color: #000000 !important;
 }
 
 .nav-pills .nav-link.active {
